--- a/Solution/Rib.Common.Application.Web.Tests/Rib.Common.Application.Web.Tests.csproj
+++ b/Solution/Rib.Common.Application.Web.Tests/Rib.Common.Application.Web.Tests.csproj
@@ -182,6 +182,12 @@
   </Choose>
   <ItemGroup>
     <Compile Include="NullArgumentTest.cs" />
+    <Compile Include="Owin\Modules\ExceptionHandlerMiddlewareTests.cs" />
+    <Compile Include="Owin\Modules\InitializeWrappersMiddlewareTests.cs" />
+    <Compile Include="Owin\Modules\LoggerMiddlewareTests.cs" />
+    <Compile Include="Owin\Modules\RedirectMiddlewareTests.cs" />
+    <Compile Include="Owin\Modules\SetCorrelationIdHeaderMiddlewareTests.cs" />
+    <Compile Include="Owin\Modules\SetOwinContextToCallContextMiddlewareTests.cs" />
     <Compile Include="Owin\OwinStoreTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Razor\RazorTemplateRunerTests.cs" />
@@ -190,6 +196,18 @@
     <ProjectReference Include="..\Rib.Common.Application.Web\Rib.Common.Application.Web.csproj">
       <Project>{028999D6-8906-47B3-BF9C-319DD30496D7}</Project>
       <Name>Rib.Common.Application.Web</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Rib.Common.Application\Rib.Common.Application.csproj">
+      <Project>{6E5331C6-F811-4844-8F8C-49CCA7BB26DC}</Project>
+      <Name>Rib.Common.Application</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Rib.Common.Models\Rib.Common.Models.csproj">
+      <Project>{A7118FA8-3EAF-4E2F-84C7-D70A5F14F023}</Project>
+      <Name>Rib.Common.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Rib.Common\Rib.Common.csproj">
+      <Project>{D73231CE-3808-4C23-8FD5-06C879DF75E4}</Project>
+      <Name>Rib.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\Rib.Tests\Rib.Tests.csproj">
       <Project>{9BF49E22-995F-472B-90E1-D37C1D323598}</Project>
