--- a/Solution/Rib.Common.Tests/Rib.Common.Tests.csproj
+++ b/Solution/Rib.Common.Tests/Rib.Common.Tests.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Helpers\Encrypting\Symmetric\SymmetricCryptoServiceExtensionsTests.cs" />
     <Compile Include="Helpers\Encrypting\Symmetric\SymmetricCryptoServiceTests.cs" />
     <Compile Include="Helpers\Encrypting\Symmetric\SymmetricKeyFactoryTests.cs" />
+    <Compile Include="Helpers\Expressions\ClousureTests.cs" />
     <Compile Include="Helpers\Expressions\ExpressionExtensionsConvertRemoverTests.cs" />
     <Compile Include="Helpers\Expressions\MemberInitMergerTests.cs" />
     <Compile Include="Helpers\Expressions\NewMakerTests.cs" />
