Rib.Common.Ef.Enums first release

--- a/Solution/Rib.Common.Ef.Enums/Rib.Common.Ef.Enums.csproj
+++ b/Solution/Rib.Common.Ef.Enums/Rib.Common.Ef.Enums.csproj
@@ -69,6 +69,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Rib.Common.Ef.Enums.nuspec" />
     <Compile Include="EnumEntityInitializer.cs" />
     <Compile Include="IEnumEntity.cs" />
     <Compile Include="IEnumEntityInitializer.cs" />
