--- a/Solution/Rib.Common.Application.Web.Tests/packages.config
+++ b/Solution/Rib.Common.Application.Web.Tests/packages.config
@@ -1,19 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net46" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
-  <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net46" />
+  <package id="JetBrains.Annotations" version="10.1.5" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
-  <package id="Moq" version="4.2.1510.2205" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
+  <package id="Moq" version="4.5.16" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
-  <package id="RazorEngine" version="3.8.2" targetFramework="net46" />
-  <package id="System.Runtime" version="4.0.0" targetFramework="net46" />
+  <package id="RazorEngine" version="3.9.0" targetFramework="net46" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net46" />
   <package id="TsSoft.AbstractMapper" version="1.0.5946.22256" targetFramework="net46" />
   <package id="TsSoft.AbstractMapper.Entity" version="1.0.5882.18784" targetFramework="net46" />
   <package id="TsSoft.AbstractMapper.Select" version="1.0.5878.32058" targetFramework="net46" />
