--- a/Solution/Rib.Common.Application.Tests/Rib.Common.Application.Tests.csproj
+++ b/Solution/Rib.Common.Application.Tests/Rib.Common.Application.Tests.csproj
@@ -151,6 +151,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ClientEnums\ClientEnumInitializerTests.cs" />
     <Compile Include="CorrelationId\CorrelationIdFactoryTests.cs" />
     <Compile Include="EnumsTest.cs" />
     <Compile Include="Hierarchy\HierarchyCacheTests.cs" />
